chore: add placeholder when no items in todo list

--- a/templates/todo_list.html
+++ b/templates/todo_list.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block header %}
-  <h1>{% block title %}{{ title }}{% endblock %}</h1>
+<h1>{% block title %}{{ title }}{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
@@ -21,22 +21,24 @@
   <div class="text-black bg-gray-200 rounded p-10 mt-6">
     {% if todos %}
     <ul class="grid grid-cols-1 divide-y">
-        {% for todo in todos %}
-            <li class="py-3 flex items-center border-gray-500	">
-              <a href="/todo/update/{{ todo.id }}" class="flex-none pr-6 text-xl">
-                {% if todo.checked == False %}
-                  <i class="lar la-circle"></i>
-                {% else %}
-                 <i class="lar la-check-circle text-lime-700"></i>
-                {% endif %}
-              </a>
-              <div class="grow">{{ todo.title }}</div>
-              <a href="/todo/delete/{{ todo.id }}" class="flex-none">
-                <i class="text-xl las la-trash text-red-600"></i>
-              </a>
-            </li>
-        {% endfor %}
+      {% for todo in todos %}
+      <li class="py-3 flex items-center border-gray-500	">
+        <a href="/todo/update/{{ todo.id }}" class="flex-none pr-6 text-xl">
+          {% if todo.checked == False %}
+          <i class="lar la-circle"></i>
+          {% else %}
+          <i class="lar la-check-circle text-lime-700"></i>
+          {% endif %}
+        </a>
+        <div class="grow">{{ todo.title }}</div>
+        <a href="/todo/delete/{{ todo.id }}" class="flex-none">
+          <i class="text-xl las la-trash text-red-600"></i>
+        </a>
+      </li>
+      {% endfor %}
     </ul>
+    {% else %}
+    <div class="text-center">Please add new todo item in the field above.</div>
     {% endif %}
   </div>
 </div>
